updated description for day 4, did some refactoring