@@ -8,28 +8,17 @@ import java.util.regex.Matcher;
 import java.util.regex.Pattern;
 import java.util.stream.Collectors;
 
-public class EncryptedName {
+public record EncryptedName(String name, int sectorId, String checksum) {
     private static final Pattern PATTERN = Pattern.compile("([a-z\\-]+)-([0-9)]+)\\[([a-z]{5})]");
     private static final int CHECKSUM_SIZE = 5;
 
-    private final String name;
-    private final int sectorId;
-    private final String checksum;
-
-    public EncryptedName(String name, int sectorId, String checksum) {
+    public EncryptedName {
         assert name != null;
         assert name.chars().distinct().count() >= 5;
         assert checksum != null;
         assert checksum.length() == 5;
 
-        this.name = name;
-        this.sectorId = sectorId;
-        this.checksum = checksum;
     }
-
-    public String name() { return name; }
-    public int sectorId() { return sectorId; }
-    public String checksum() { return checksum; }
 
     public String decrypt() {
         return decrypt(name, sectorId);
@@ -41,7 +30,7 @@ public class EncryptedName {
     }
 
     public static Optional<EncryptedName> from(String encryptedName) {
-        final Optional<Triplet<String,Integer,String>> triplet = split(encryptedName);
+        final var triplet = split(encryptedName);
         if (triplet.isPresent()) {
             final String name = triplet.get().getValue0();
             final Integer sectorId = triplet.get().getValue1();
@@ -61,7 +50,7 @@ public class EncryptedName {
         return checksum(name).equals(checksum);
     }
 
-    private static List<Pair<Long,String>> letterList(String name) {
+    private static List<Pair<Long, String>> letterList(String name) {
         final String letters = name.replaceAll("-", "");
 
         return letters.chars()
@@ -71,12 +60,10 @@ public class EncryptedName {
                 .stream()
                 .map(entry -> Pair.with(entry.getValue(), entry.getKey()))
                 .sorted((o1, o2) -> (!o1.getValue0().equals(o2.getValue0()) ? Long.compare(o2.getValue0(), o1.getValue0()) : o1.getValue1().compareTo(o2.getValue1())))
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public static String checksum(String name) {
-        final String letters = name.replaceAll("-", "");
-
         return letterList(name).stream()
                 .limit(CHECKSUM_SIZE)
                 .map(Pair::getValue1)
@@ -101,8 +88,6 @@ public class EncryptedName {
             return " ";
 
         i = i + (sectorId % 26);
-        return Character.toString(i  > 'z' ? i - 26 : i);
+        return Character.toString(i > 'z' ? i - 26 : i);
     }
-
-
 }
